Add email verification and welcome email templates
- Created a new email verification template at resources/views/auth/verify-email.blade.php
- Added a welcome email template at resources/views/emails/welcome.blade.php

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -55,7 +55,7 @@ form {
 input,
 select,
 textarea {
-    @apply block w-full mt-2 mb-4 p-2;
+    @apply block w-full p-2;
 }
 
 /* custom classes */
